--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,12 @@
 version: 1.0.{build}
 skip_non_tags: true
 image: 
+- Visual Studio 2019
 - Ubuntu2004
 configuration: Release
 platform: 
 - x64
+
 
 for:
 # ubuntu
@@ -24,4 +26,20 @@ for:
 
     artifacts:
     - path: ./build/x64-linux/MocliaParseBot
+      name: MocliaParseBot-x64
+# visual studio
+- 
+    matrix:
+        only:
+            - image: Visual Studio 2019
+              platform: x64
+
+    install:
+    - pwsh: ./scripts/prepare-x64-windows.ps1
+
+    build_script:
+    - pwsh: ./scripts/build-x64-windows.ps1
+
+    artifacts:
+    - path: ./build/x64-windows/MocliaParseBot.exe
       name: MocliaParseBot-x64
